tests/codegen/compile/runtime/fail/missing_args.rs
use rust_liveview::runtime;

#[runtime::main]
async fn main() {}
