tests/codegen/compile/runtime/fail/missing_args.stderr
error: Missing executor configuration.
 --> $DIR/missing_args.rs:3:1
  |
3 | #[runtime::main]
  | ^^^^^^^^^^^^^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/missing_args.rs:1:1
  |
1 | / use rust_liveview::runtime;
2 | |
3 | | #[runtime::main]
4 | | async fn main() {}
  | |__________________^ consider adding a `main` function to `$DIR/tests/codegen/compile/runtime/fail/missing_args.rs`
